--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context="com.genassembly.dotdashdot.sqllab.MainActivity">
 
     <ListView android:id="@+id/mainList" android:layout_width="match_parent"
-        android:layout_height="350dp" />
+        android:layout_height="300dp" />
 
     <EditText
         android:id="@+id/gameNum"
@@ -29,6 +29,12 @@
     <Button
         android:id="@+id/stats"
         android:text="Stats"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/drop_table"
+        android:text="Drop Table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
